force-app/main/default/objects/Building__c/fields/UnitSellableAmount__c.field-meta.xml
<CustomField>
    <fullName>UnitSellableAmount__c</fullName>
    <formula>Area__c * Unit_Area_Sqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Sellable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>