force-app/main/default/objects/Building__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>WD</fullName>
            </value>
            <value>
                <fullName>OV</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
            <value>
                <fullName>BV</fullName>
            </value>
            <value>
                <fullName>FV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>