force-app/main/default/objects/Building__c/fields/VillaArea__c.field-meta.xml
<CustomField>
    <fullName>VillaArea__c</fullName>
    <label>Villa Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>