force-app/main/default/objects/Building__c/fields/VillaSellableAreaSqm__c.field-meta.xml
<CustomField>
    <fullName>VillaSellableAreaSqm__c</fullName>
    <label>Villa Sellable Area / Sqm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>