force-app/main/default/objects/Building__c/fields/Weighting_Factors_Zone__c.field-meta.xml
<CustomField>
    <fullName>Weighting_Factors_Zone__c</fullName>
    <label>Weighting Factors Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>