force-app/main/default/objects/Building__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZONE A - THE FALCON WEST AVENUE</fullName>
            </value>
            <value>
                <fullName>ZONE B - THE FALCON CENTRAL AVENUE</fullName>
            </value>
            <value>
                <fullName>ZONE C - THE FALCON EAST AVENUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>