force-app/main/default/objects/Building__c/fields/ZoneCode__c.field-meta.xml
<CustomField>
    <fullName>ZoneCode__c</fullName>
    <label>Zone Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>