force-app/main/default/objects/Building__c/recordTypes/Offices.recordType-meta.xml
<RecordType>
    <fullName>Offices</fullName>
    <active>true</active>
    <label>Offices</label>
</RecordType>