force-app/main/default/objects/Building__c/recordTypes/Standard_Retail.recordType-meta.xml
<RecordType>
    <fullName>Standard_Retail</fullName>
    <active>true</active>
    <label>Standard Retail</label>
</RecordType>