force-app/main/default/objects/Building__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Zone__c</columns>
    <columns>Tower_Name__c</columns>
    <columns>RN__c</columns>
    <columns>Unit_Area_Sqm_NSA__c</columns>
    <columns>Service_Area_Sqm__c</columns>
    <columns>Terrace_Area_Sqm__c</columns>
    <columns>Total_Unit_Area_Sqm__c</columns>
    <columns>Leasing_Rate_Sqm_SAR__c</columns>
    <columns>Price_Sqm_SAR_Services__c</columns>
    <columns>Price_Sqm_SAR_Terraces__c</columns>
    <columns>Total_NSA__c</columns>
    <columns>Total_Prices_Services_Areas__c</columns>
    <columns>Total_Prices_Terraces_Areas__c</columns>
    <columns>Gross_Leasable_Amount_SAR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>