force-app/main/default/objects/Building__c/listViews/Kayanat_Central_Retail.listView-meta.xml
<ListView>
    <fullName>Kayanat_Central_Retail</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Zone__c</columns>
    <columns>Level__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Unit_No__c</columns>
    <columns>Unit_Area_Sqm__c</columns>
    <columns>Asking_Price__c</columns>
    <columns>Asking_Annual_Rent__c</columns>
    <columns>Retail_Category__c</columns>
    <columns>Type_of_Activity__c</columns>
    <columns>RN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Center_Name__c</field>
        <operation>equals</operation>
        <value>Kayanat Central - Retail</value>
    </filters>
    <label>Kayanat Central - Retail</label>
</ListView>