force-app/main/default/objects/Building__c/listViews/Residential.listView-meta.xml
<ListView>
    <fullName>Residential</fullName>
    <columns>NAME</columns>
    <columns>LocationAndVisibility__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>LandArea__c</columns>
    <columns>LandSellableAreaSqm__c</columns>
    <columns>LandSellableAmount__c</columns>
    <columns>VillaArea__c</columns>
    <columns>VillaSellableAreaSqm__c</columns>
    <columns>VillaSellableAmount__c</columns>
    <columns>PreLaunchPrice__c</columns>
    <columns>Asking_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Building__c.Residential</value>
    </filters>
    <label>Residential</label>
</ListView>