force-app/main/default/objects/Building__c/listViews/Retail_Units.listView-meta.xml
<ListView>
    <fullName>Retail_Units</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Zone__c</columns>
    <columns>ZoneCode__c</columns>
    <columns>Level__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Unit_No__c</columns>
    <columns>Unit_Area_Sqm__c</columns>
    <columns>Minimum_Annual_Rent__c</columns>
    <columns>Asking_Annual_Rent__c</columns>
    <columns>Retail_Category__c</columns>
    <columns>Type_of_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Building__c.Retail</value>
    </filters>
    <label>Retail Units</label>
</ListView>